# advantage_light_OPGL

./: CMakeLists.txt
dependences/include/imgui/: imgui.h  imgui_internal.h
dependences/old_dep/include/: constant.hpp  iochars.hpp
dependences/old_dep/include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_quit.h  SDL_rect.h  (+30 more)
dependences/old_dep/include/imgui/: imconfig.h  imgui.h  imgui_internal.h
dependences/old_dep/lib/sdl2/: libSDL2.la  libSDL2_test.la  libSDL2main.la
dependences/old_dep/lib/sdl2/cmake/SDL2/: sdl2-config-version.cmake  sdl2-config.cmake
dependences/old_dep/lib/sdl2/pkgconfig/: sdl2.pc
dependences/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_widgets.cpp
resources/image/: diamond_ore.jfif
resources/shader_source/: cubemap_fshader.frag  cubemap_vshader.vert  deep_map_fshader.frag  deep_map_gshader.gs  deep_map_vshader.vert  floor_fshader.frag  floor_vshader.vert  shadow_map_fshader.frag  shadow_map_vshader.vert  simple_shadow_map_fshader.frag  simple_shadow_map_vshader.vert
src/: main.cpp
src/entity/: player.hpp
src/handle_graphic/: handle_data.hpp  shader.h  shader.hpp  texture.hpp
src/handle_graphic/src/: handle_data.cpp  shader.cpp  texture.cpp
src/util/: camera.hpp  const.hpp  window_driver.hpp
src/util/src/: camera.cpp  const.cpp  window_driver.cpp
src/votex/: Ground_face.hpp  skybox.hpp
src/votex/src/: Ground_face.cpp  skybox.cpp
